# Shell-Structure-of-the-MHO

./: data.csv  fit-gap-energies.py  pyproject.toml  results.md
